[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/main_menu.gd" type="Script" id=1]
[ext_resource path="res://global/font/main.tres" type="DynamicFont" id=2]

[node name="main_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -217.086
margin_top = 95.2218
margin_right = -167.086
margin_bottom = 115.222
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits_button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -157.633
margin_top = 94.1034
margin_right = -93.6332
margin_bottom = 114.103
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit_button" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 177.883
margin_top = 92.1107
margin_right = 227.883
margin_bottom = 112.111
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -56.0
margin_right = 119.0
margin_bottom = 102.0
custom_fonts/normal_font = ExtResource( 2 )
text = "Oskar 'Skar' van Velden - programming"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.0
margin_top = -126.0
margin_right = 119.0
margin_bottom = -90.0
custom_fonts/normal_font = ExtResource( 2 )
text = "who created this gem?
it's the following people:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="close_button" type="Button" parent="credits"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -19.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "x"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}
